@@ -15,3 +15,4 @@ gnumeric.lot
 gnumeric.pdf
 gnumeric.tex
 gnumeric.toc
+gnumeric.pot
