@@ -1,0 +1,15 @@
+s/\xE2\xA8\x89/\\ensuremath{\\times}/g
+s/\xE2\x96\xB6/\\ensuremath{\blacktriangleright}/g
+s/≤/\\ensuremath{\\le}/g
+s/≥/\\ensuremath{\\ge}/g
+s/−∞/\\ensuremath{-\\infty}/g
+s/∞/\\ensuremath{\\infty}/g
+s/⋯/\\ldots/g
+s/−/-/g
+s/ /\\,/g
+s/∙/\\ensuremath{\\cdot}/g
+s/∓/\\ensuremath{\\mp}/g
+s/𝛼/\\ensuremath{\\alpha}/g
+s/𝜔/\\ensuremath{\\omega}/g
+s/𝜋/\\ensuremath{\\pi}/g
+s/𝜉/\\ensuremath{\\xi}/g
